Fix export replacement on Windows
Allow users to replace existing exports through the native save dialog.
Preserve existing files when export fails and protect Koko's internal
library.

Fix path tests for Windows and document the limits of detecting
changes made by other programs before replacement.